{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 105,
  "lineage": "98f283a0-a369-50a4-0ff3-6428198262dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dbipr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a29cf4754a63f35",
            "arn": "arn:aws:ec2:us-west-2:464716974375:elastic-ip/eipalloc-06a29cf4754a63f35",
            "association_id": "eipassoc-0da089e3f0fcbd763",
            "domain": "vpc",
            "id": "eipalloc-06a29cf4754a63f35",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0741bc3dc16fee1ad",
            "private_dns": "ip-10-0-1-228.us-west-2.compute.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-32-187-33-142.us-west-2.compute.amazonaws.com",
            "public_ip": "32.187.33.142",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "ipr"
            },
            "tags_all": {
              "Name": "ipr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "eipalloc-06a29cf4754a63f35",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ipr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bb3f4685f2ea7ac",
            "arn": "arn:aws:ec2:us-west-2:464716974375:elastic-ip/eipalloc-05bb3f4685f2ea7ac",
            "association_id": "eipassoc-0740ddc760aefed1f",
            "domain": "vpc",
            "id": "eipalloc-05bb3f4685f2ea7ac",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c60870534300f8b9",
            "private_dns": "ip-10-0-1-32.us-west-2.compute.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-35-85-194-147.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.194.147",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "ipr"
            },
            "tags_all": {
              "Name": "ipr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "eipalloc-05bb3f4685f2ea7ac",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ac74609c6396bed3",
            "arn": "arn:aws:ec2:us-west-2:464716974375:instance/i-0b3fd55cfa823ed13",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3fd55cfa823ed13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "flask_app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-005b367d107d9ef48"
              }
            ],
            "primary_network_interface_id": "eni-005b367d107d9ef48",
            "private_dns": "ip-10-0-2-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-060125251f28dc849",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f13cf535afe659a",
            "tags": {
              "Name": "backend-machine",
              "role": "backend"
            },
            "tags_all": {
              "Name": "backend-machine",
              "role": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba99d9fd6c4e4983"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "i-0b3fd55cfa823ed13",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_network_interface.example",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ac74609c6396bed3",
            "arn": "arn:aws:ec2:us-west-2:464716974375:instance/i-0cb2c7ac85f4ff3fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb2c7ac85f4ff3fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "flask_app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d7703e6565b14031"
              }
            ],
            "primary_network_interface_id": "eni-0d7703e6565b14031",
            "private_dns": "ip-10-0-1-211.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_ip": "18.246.249.16",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a753d46c5e371d67",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0149e9d2f047c6a9b",
            "tags": {
              "Name": "bastion-machine",
              "role": "bastion"
            },
            "tags_all": {
              "Name": "bastion-machine",
              "role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ab2bf0260396efa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "i-0cb2c7ac85f4ff3fd",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ac74609c6396bed3",
            "arn": "arn:aws:ec2:us-west-2:464716974375:instance/i-0b1d5d3d3b5bc439a",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1d5d3d3b5bc439a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "flask_app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-073f0907892c8bf28"
              }
            ],
            "primary_network_interface_id": "eni-073f0907892c8bf28",
            "private_dns": "ip-10-0-3-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.10",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c1ddbe1c2a7db545",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0831f42e66411ad5d",
            "tags": {
              "Name": "database-machine",
              "role": "database"
            },
            "tags_all": {
              "Name": "database-machine",
              "role": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b890be737e22f83"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "i-0b1d5d3d3b5bc439a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_network_interface.dataeni",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.database_sg",
            "aws_security_group.front_sg",
            "aws_subnet.data_subnet",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "front_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ac74609c6396bed3",
            "arn": "arn:aws:ec2:us-west-2:464716974375:instance/i-01046da9c7991bf2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01046da9c7991bf2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "flask_app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-059987a93bfe54a5b"
              }
            ],
            "primary_network_interface_id": "eni-059987a93bfe54a5b",
            "private_dns": "ip-10-0-1-84.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_ip": "35.86.190.121",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-041d1fc3b70ebd50b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0149e9d2f047c6a9b",
            "tags": {
              "Name": "front-machine",
              "role": "nginx"
            },
            "tags_all": {
              "Name": "front-machine",
              "role": "nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e5d65b7d4f717b8a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "i-01046da9c7991bf2a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.front_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:internet-gateway/igw-0fa60ab78191da3da",
            "id": "igw-0fa60ab78191da3da",
            "owner_id": "464716974375",
            "region": "us-west-2",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "igw-0fa60ab78191da3da",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dbnat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a29cf4754a63f35",
            "association_id": "eipassoc-0da089e3f0fcbd763",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02978d00c689ed51f",
            "network_interface_id": "eni-0741bc3dc16fee1ad",
            "private_ip": "10.0.1.228",
            "public_ip": "32.187.33.142",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0149e9d2f047c6a9b",
            "tags": {
              "Name": "dbnat_gw"
            },
            "tags_all": {
              "Name": "dbnat_gw"
            },
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "nat-02978d00c689ed51f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.dbipr",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bb3f4685f2ea7ac",
            "association_id": "eipassoc-0740ddc760aefed1f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06e5b44306f6421d4",
            "network_interface_id": "eni-0c60870534300f8b9",
            "private_ip": "10.0.1.32",
            "public_ip": "35.85.194.147",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0149e9d2f047c6a9b",
            "tags": {
              "Name": "nat_gw"
            },
            "tags_all": {
              "Name": "nat_gw"
            },
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "nat-06e5b44306f6421d4",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.ipr",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dataeni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:network-interface/eni-073f0907892c8bf28",
            "attachment": [
              {
                "attachment_id": "eni-attach-04e91f24abb80d559",
                "device_index": 0,
                "instance": "i-0b1d5d3d3b5bc439a",
                "network_card_index": 0
              }
            ],
            "id": "eni-073f0907892c8bf28",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ff:e2:57:c8:81",
            "owner_id": "464716974375",
            "private_ip": "10.0.3.10",
            "private_ip_list": [
              "10.0.3.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.10"
            ],
            "private_ips_count": 0,
            "region": "us-west-2",
            "security_groups": [
              "sg-01b890be737e22f83"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0831f42e66411ad5d",
            "tags": {
              "Name": "database_network_interface"
            },
            "tags_all": {
              "Name": "database_network_interface"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.database_sg",
            "aws_security_group.front_sg",
            "aws_subnet.data_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:network-interface/eni-005b367d107d9ef48",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f992a9aebbccf1b7",
                "device_index": 0,
                "instance": "i-0b3fd55cfa823ed13",
                "network_card_index": 0
              }
            ],
            "id": "eni-005b367d107d9ef48",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:01:ec:02:d6:d7",
            "owner_id": "464716974375",
            "private_ip": "10.0.2.10",
            "private_ip_list": [
              "10.0.2.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.10"
            ],
            "private_ips_count": 0,
            "region": "us-west-2",
            "security_groups": [
              "sg-0ba99d9fd6c4e4983"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f13cf535afe659a",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:route-table/rtb-013998762376bdc1a",
            "id": "rtb-013998762376bdc1a",
            "owner_id": "464716974375",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02978d00c689ed51f",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "data_rt"
            },
            "tags_all": {
              "Name": "data_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "rtb-013998762376bdc1a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.dbipr",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.dbnat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:route-table/rtb-09d515f6d292b6013",
            "id": "rtb-09d515f6d292b6013",
            "owner_id": "464716974375",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e5b44306f6421d4",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "rtb-09d515f6d292b6013",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.ipr",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:route-table/rtb-0fe55a015a4d6c4c1",
            "id": "rtb-0fe55a015a4d6c4c1",
            "owner_id": "464716974375",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa60ab78191da3da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "rtb-0fe55a015a4d6c4c1",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0496d35d71ed9b6",
            "region": "us-west-2",
            "route_table_id": "rtb-013998762376bdc1a",
            "subnet_id": "subnet-0831f42e66411ad5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "rtbassoc-0f0496d35d71ed9b6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.dbipr",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.dbnat_gw",
            "aws_route_table.data_rt",
            "aws_subnet.data_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041b4a317e8201ecd",
            "region": "us-west-2",
            "route_table_id": "rtb-09d515f6d292b6013",
            "subnet_id": "subnet-07f13cf535afe659a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "rtbassoc-041b4a317e8201ecd",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.ipr",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00abb0d6cc08d0ed4",
            "region": "us-west-2",
            "route_table_id": "rtb-0fe55a015a4d6c4c1",
            "subnet_id": "subnet-0149e9d2f047c6a9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "rtbassoc-00abb0d6cc08d0ed4",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:security-group/sg-0ba99d9fd6c4e4983",
            "description": "well accept the inbound traffic only from nginx port to the database port ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba99d9fd6c4e4983",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ab2bf0260396efa"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5d65b7d4f717b8a"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "464716974375",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend_sg"
            },
            "tags_all": {
              "Name": "backend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "sg-0ba99d9fd6c4e4983",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:security-group/sg-01ab2bf0260396efa",
            "description": "well accept the inbound traffic my machine and connect me to other private vms",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ab2bf0260396efa",
            "ingress": [
              {
                "cidr_blocks": [
                  "196.77.28.188/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "464716974375",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "sg-01ab2bf0260396efa",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:security-group/sg-01b890be737e22f83",
            "description": "well accept the inbound traffic only from backend sg to the database port ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b890be737e22f83",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ab2bf0260396efa"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba99d9fd6c4e4983"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "464716974375",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_sg"
            },
            "tags_all": {
              "Name": "database_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "sg-01b890be737e22f83",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:security-group/sg-0e5d65b7d4f717b8a",
            "description": "well accept the inbound traffic from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5d65b7d4f717b8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "196.77.28.188/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "front_sg",
            "name_prefix": "",
            "owner_id": "464716974375",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "front_sg"
            },
            "tags_all": {
              "Name": "front_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "sg-0e5d65b7d4f717b8a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:subnet/subnet-0831f42e66411ad5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831f42e66411ad5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464716974375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "database-subnet"
            },
            "tags_all": {
              "Name": "database-subnet"
            },
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "subnet-0831f42e66411ad5d",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:subnet/subnet-07f13cf535afe659a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f13cf535afe659a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464716974375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "backend-subnet"
            },
            "tags_all": {
              "Name": "backend-subnet"
            },
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "subnet-07f13cf535afe659a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:subnet/subnet-0149e9d2f047c6a9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0149e9d2f047c6a9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464716974375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "front-subnet"
            },
            "tags_all": {
              "Name": "front-subnet"
            },
            "vpc_id": "vpc-06e178ddbad9e0138"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "subnet-0149e9d2f047c6a9b",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:464716974375:vpc/vpc-06e178ddbad9e0138",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fc921e13e989527",
            "default_route_table_id": "rtb-043372e0754252ccf",
            "default_security_group_id": "sg-09b58c113b205866e",
            "dhcp_options_id": "dopt-058ee4868840e8fe3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e178ddbad9e0138",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043372e0754252ccf",
            "owner_id": "464716974375",
            "region": "us-west-2",
            "tags": {
              "Name": "first_combo"
            },
            "tags_all": {
              "Name": "first_combo"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "464716974375",
            "id": "vpc-06e178ddbad9e0138",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}